--- a/note/templates/note/authorized.html
+++ b/note/templates/note/authorized.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ title }}</title>
-</head>
-<body>
-<p>You're in restricted area.</p>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+    <p>You're in restricted area.</p>
+{% endblock %}
