--- a/note/templates/note/index.html
+++ b/note/templates/note/index.html
@@ -1,9 +1,17 @@
 {% extends "base.html" %}
+{# Browser Title #}
+{% block title %}
+    Home Page - SmartNotes
+{% endblock %}
 
+{% block page-title %}
+    <h3 class="text-center my-3" style="font-family: 'Academy Engraved LET'">SmartNotes</h3>
+{% endblock %}
+{# Browser Content #}
 {% block content %}
     <div class="my-5 text-center ">
-        <h1>Note :: Home Page</h1>
-        <p>Server Time : {{ now }}</p>
+        <h1 style="font-family: 'Academy Engraved LET';">Note :: Home Page</h1>
+        <p style="font-family: 'Academy Engraved LET'; size: 20px;">Server Time : {{ now }}</p>
     </div>
     <div class="my-3 text-center">
         <a class="btn btn-secondary" href="{% url 'list_notes' %}">List of SmartNotes</a>
