--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,20 @@
 </head>
 <body>
 <div class="container-fluid">
+    <div class="row my-1">
+        <nav class="navbar navbar-light bg-light justify-content-between">
+            <a href="{% url 'home' %}" class="navbar-brand">Home</a>
+            {% if request.user.is_authenticated %}
+                <a href="{% url 'logout' %}" class="navbar-brand">Logout</a>
+            {% else %}
+                {% if "" in request.path %}
+                    <a href="{% url 'signup' %}" class="navbar-brand">Register</a>
+                {% endif %}
+                <a href="{% url 'login' %}" class="navbar-brand">Login</a>
+            {% endif %}
+        </nav>
+    </div>
+
     <div class="row my-2">
         <div class="col-12">
             {% block page-title %}
