--- a/note/templates/signup.html
+++ b/note/templates/signup.html
@@ -5,7 +5,7 @@
         <form method="POST" style="text-align: left; margin: 0 auto; width: 600px;">
             {% csrf_token %}
             {{ form.as_p }}
-            <input type="submit" value="Register">
+            <input class="btn btn-success" type="submit" value="Register">
         </form>
     </div>
 {% endblock %}
