--- a/note/templates/note/note-form.html
+++ b/note/templates/note/note-form.html
@@ -16,7 +16,7 @@
                 {% csrf_token %}
                 {{ form }}
                 <div class="text-center">
-                    <button type="submit" class="btn btn-secondary btn-outline-info mb-3">
+                    <button type="submit" class="btn btn-primary mb-3">
                         {% if request.path == "/notes/new" %}
                             Add Note
                         {% else %}
