--- a/templates/base.html
+++ b/templates/base.html
@@ -13,16 +13,18 @@
 </head>
 <body>
 <div class="container-fluid">
-    <div class="row my-1">
-        <nav class="navbar navbar-light bg-light justify-content-between">
-            <a href="{% url 'home' %}" class="navbar-brand">Home</a>
+    <div class="row">
+        <nav class="navbar navbar-light bg-light justify-content-end">
+            <a href="{% url 'home' %}" class="btn btn-primary m-2">Home</a>
             {% if request.user.is_authenticated %}
-                <a href="{% url 'logout' %}" class="navbar-brand">Logout</a>
+                <a href="{% url 'new_note' %}" class="btn btn-primary m-2">Create</a>
+                <a href="{% url 'list_notes' %}" class="btn btn-primary m-2">List Your Notes</a>
+                <a href="{% url 'logout' %}" class="btn btn-warning m-2">Logout</a>
             {% else %}
                 {% if "" in request.path %}
-                    <a href="{% url 'signup' %}" class="navbar-brand">Register</a>
+                    <a href="{% url 'signup' %}" class="btn btn-dark m-2">Register</a>
                 {% endif %}
-                <a href="{% url 'login' %}" class="navbar-brand">Login</a>
+                <a href="{% url 'login' %}" class="btn btn-dark m-2">Login</a>
             {% endif %}
         </nav>
     </div>
@@ -38,16 +40,6 @@
             {% block content %}
             {% endblock %}
         </div>
-    </div>
-    {% if request.path != "/" %}
-        <div class="text-center">
-            <a href="{% url 'home' %}" class="btn btn-primary">Home</a>
-        </div>
-    {% endif %}
-    {% if request.path != '/notes/new' %}
-        <div class="text-center mt-3">
-        <a href="{% url 'new_note' %}" class="btn btn-primary">Add New Note</a>
-    {% endif %}
     </div>
 </div>
 
