--- a/note/templates/logout.html
+++ b/note/templates/logout.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %} SmartNotes :: See you back Soon!!! {% endblock %}
 {% block content %}
     <div class="text-center mb-3">
         <p>Hope to see you soon :)</p>
