--- a/note/templates/signup.html
+++ b/note/templates/signup.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% block title %} Register as SmartNotes User {% endblock %}
 {% block content %}
     <div class="text-center mb-3">
         <form method="POST" style="text-align: left; margin: 0 auto; width: 600px;">
